--- a/rest-with-spring-boot-java-and-erudio/07_SpringDataJPAeIntegracaoDaAPIaoMYSQL/src/main/resources/application.yml
+++ b/rest-with-spring-boot-java-and-erudio/07_SpringDataJPAeIntegracaoDaAPIaoMYSQL/src/main/resources/application.yml
@@ -1,1 +1,15 @@
-spring.application.name=rest-with-spring-boot-java-and-erudio
+spring:
+  application:
+    name: rest-with-spring-boot-java-and-erudio
+  datasource:
+      driver-class-name: com.mysql.jc.jdbc.driver
+      url: jdbc:mysql://localhost:3306/rest_with_spring_boot_java_erudio?useTimezone=true&serverTimezone=UTC
+      username: root
+      password: Co123456789
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+    show-sql: false
