--- a/rest-with-spring-boot-java-and-erudio/07_SpringDataJPAeIntegracaoDaAPIaoMYSQL/src/main/resources/application.yml
+++ b/rest-with-spring-boot-java-and-erudio/07_SpringDataJPAeIntegracaoDaAPIaoMYSQL/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: rest-with-spring-boot-java-and-erudio
   datasource:
-      driver-class-name: com.mysql.jc.jdbc.driver
+      driver-class-name: com.mysql.cj.jdbc.Driver
       url: jdbc:mysql://localhost:3306/rest_with_spring_boot_java_erudio?useTimezone=true&serverTimezone=UTC
       username: root
       password: Co123456789
@@ -11,5 +11,7 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+        #dialect: org.hibernate.dialect.MySQLDialect A própia IDE pede para não deixar esta linha para evitar Warning
     show-sql: false
+
+    open-in-view: false
