Finalização do módulo 11 do curso

--- a/rest-with-spring-boot-java-and-erudio/11_AdicionandoSuporteAMigrationsComFlyway/src/main/resources/application.yml
+++ b/rest-with-spring-boot-java-and-erudio/11_AdicionandoSuporteAMigrationsComFlyway/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
       password: Co123456789
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       hibernate:
         #dialect: org.hibernate.dialect.MySQLDialect A própia IDE pede para não deixar esta linha para evitar Warning
