Adicionando o V3 e o V4 do db, de acordo com o que foi pedido pelo professor do curso

--- a/rest-with-spring-boot-java-and-erudio/15_AdicionandoSuporteAoSwagger(OpenAPI)/src/main/resources/application.yml
+++ b/rest-with-spring-boot-java-and-erudio/15_AdicionandoSuporteAoSwagger(OpenAPI)/src/main/resources/application.yml
@@ -24,3 +24,7 @@ logging:
     #INFO (Mostra informações normais da aplicação e é DEFAULT)
     #WARNING (Mostra alertas que podem estar acontecendo na aplicação e é o nível mais ideal para produção)
     #ERROR (Algo que requer atenção e deve conferir quando começa acontecer este tipo de Log)
+spring-doc:
+  paths-to-match: /api/**/v1/**
+  swagger-ui:
+    use-root-path: true
