--- a/rest-with-spring-boot-java-and-erudio/15_AdicionandoSuporteAoSwagger(OpenAPI)/pom.xml
+++ b/rest-with-spring-boot-java-and-erudio/15_AdicionandoSuporteAoSwagger(OpenAPI)/pom.xml
@@ -29,6 +29,7 @@
 	<properties>
 		<java.version>21</java.version>
 		<dozer.version>7.0.0</dozer.version>
+		<springdoc.version>2.7.0</springdoc.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -39,6 +40,13 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-hateoas</artifactId>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>${springdoc.version}</version>
 		</dependency>
 
 		<dependency>
